config/deploy/production/service-redoc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redoc
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/component: redoc
    app.kubernetes.io/instance: polaris
    app.kubernetes.io/managed-by: Shipit
    app.kubernetes.io/name: polaris
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/component: redoc
    app.kubernetes.io/instance: polaris
    app.kubernetes.io/name: polaris
