config/deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: polaris
    app.kubernetes.io/managed-by: Shipit
    app.kubernetes.io/name: polaris
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: polaris
    app.kubernetes.io/name: polaris
